# tflite-micro

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
